--- a/style.css
+++ b/style.css
@@ -5,6 +5,10 @@ body {
 	color: #000;
 }
 
+a, a:hover {
+  color: white;
+}
+
 #optTable {
 	font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
 	font-size: 15px;
@@ -47,7 +51,14 @@ body {
 
 #menu-restart {
   border-left-width: 0px; 
+}
+
+.menu-link {
   cursor: pointer;
+}
+
+#menu-right {
+  float: right;
 }
 
 .resTable thead {
